HomeScreen Product Listing

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Find the best East African products for an affordable price"
+      content="Khangadelic symbolizes the colour and vibrancy of Kenyan Coastal culture and Lifestyle through contemporary clothing and accessories. We have a passion for Fashion and a love for the environment. We are working on beach clean ups and recycling"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
